tdf#119991 save checkbox tristate in oox format

Change-Id: I313bff6115d56c2567a4586daa43851a1db12b0b